Fixed white space issue on the side.Footer section uploads images

--- a/assets/css/theme-style.css
+++ b/assets/css/theme-style.css
@@ -38,7 +38,7 @@
 	background: #2c2b71;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to top left, #2c2b71, #4FC2B6, #ED217C);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to top left, #2c2b71, #4FC2B6, #ED217C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	height: 91vh;
+	/* height: 91vh; */
 }
 
 .navbarBg {
@@ -59,6 +59,10 @@
 	text-transform: uppercase;
 }
 
+.mainLogo {
+	margin-top: 2em;
+}
+
 .logoText {
 	color: #FFFFFF;
 	font-size: 5em;
@@ -71,6 +75,7 @@
 
 .main-menu {
 	padding: 0;
+	margin-bottom: 0;
 }
 
 .main-menu li {
@@ -98,7 +103,7 @@
 	transition: 0.4s;
 }
 
-.footer{
+.footer-content {
 	color: #FFFFFF;
 	background-color: #1C1C1C;
 }
@@ -141,6 +146,10 @@
     height: 100%;
     width: 100%;
     position: absolute;
+}
+
+.footerSponsersSec{
+	background-color: #1C1C1C;
 }
 
 .sponsers {
